# openclaw-guardian

./: .gitignore  AUTOMATION.md  CHANGELOG.md  CONTRIBUTING.md  DELIVERY.md  DEPLOYMENT_COMPLETE.md  GITHUB_README.md  GITHUB_SUCCESS.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  RELEASE_GUIDE.md  STATUS_REPORT.md  clawhub.json  hourly_optimize.sh  install.sh  main.py  pyproject.toml  release.sh  requirements.txt  setup-launchd.sh  setup.py  setup_cron.sh  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
core/: __init__.py  healer.py  monitor.py  optimizer.py  scanner.py  self_optimizer.py
utils/: __init__.py  config.py  logger.py  searcher.py
